--- a/prezenty.html
+++ b/prezenty.html
@@ -50,11 +50,12 @@
 	    
     </head>
     <body>
-        <div class="banner" title="SZTAB Moskwa zaprasza na targi online na rzecz WOŚP"></div>
+        <div class="banner" title="SZTAB Moskwa zaprasza na targi online na rzecz 30. finalu WOŚP"></div>
         <div class="main">
      <!-- top menu-->
         <div class="topmenu-wrap">
-<div class="topmenu"><a href="#ozdoby_choinkowe">Ozdoby&nbsp;choinkowe</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#handmade">Handmade</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#handmade">Handmade</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#contact">Kontakt</a></div></div><div class="br"></div>
+<div class="topmenu"><a href="/index.html#ozdoby_choinkowe">Ozdoby&nbsp;choinkowe</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/index.html#handmade">Handmade</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+	<a href="prezenty.html#pierniki">Pierniki</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="prezenty.html#kosmetyki">Kosmetyki</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#contact">Kontakt</a></div></div><div class="br"></div>
  </div><div class="br"></div>
    <!-- /top menu-->
      <!-- main container -->   
@@ -62,8 +63,8 @@
      <div class="anonce">Przedstawiamy prezenty.... <p><b>Drodzy Mikołajowie! Połączcie przyjemne z pożytecznym!</b></p>
 <p>Serdecznie zapraszamy do zakupów online, opłata za pośrednictwem eSkarbonki wolontariuszki naszego sztabu.<br/>
 Całkowity dochód ze sprzedaży przeznaczony będzie na cele 30. Finału WOŚP, czyli zakup sprzętu dla zapewnienia najwyższych standardów diagnostyki i leczenia wzroku u dzieci.</p>
-<p><span class="red">!&nbsp;</span>Odbiór Ambasada RP, Bolshoy Tishinsky Pereulok. <b>Telefon kontaktowy +7 916 465 06 67</b></span></p>
-<p>Opłata za towary za pośrednictwem eSkarbonki wolontariuszki naszego sztabu (Visa, Mastercard, Maestro, Paypal) przy odbiorze!</p>
+<p><span class="red">!&nbsp;Odbiór Ambasada RP, Bolshoy Tishinsky Pereulok. <b>Telefon kontaktowy +7 916 465 06 67</b></span></p>
+<p><b>Opłata za towary za pośrednictwem eSkarbonki wolontariuszki naszego sztabu (Visa, Mastercard, Maestro, Paypal) przy odbiorze!</b></p>
               
     <div class="br"></div>
           <a href="https://eskarbonka.wosp.org.pl/td4lyz" target="_blank" class="eskarbonka" title="eSkarbonka"><b>eSkarbonka</b> obsługuje wszystkie karty Visa i Mastercard                      
@@ -71,19 +72,19 @@ Całkowity dochód ze sprzedaży przeznaczony będzie na cele 30. Finału WOŚP,
       </div> 
             <!--div class="rezerw"></div-->
       <h1>Ceny PLN</h1>
-      <!-- Ozdoby choinkowe-->
+      <!-- pierniki-->
         <h2>Zestaw pierników</h2>
          <div class="goods" id="pierniki">  
              <div class="book-03"><img src="img/pierniki_zestaw.jpg"><b>Pierniki Toruńskie — zestaw 2 opakowań w lnianym woreczku.<br/>Pierniki nadziewane o smaku moreli i czarnej porzeczki. 
-<br/>Pierniki o smaku whisky i tequili.</b><i>50 PLN</i></div>  
+<br/>Pierniki o smaku whisky i tequili.</b><i>50 PLN / 1000 Rub.</i></div>  
              <div class="br"></div>             
    </div>
         <!--/pierniki-->      
      <!-- kosmetyki inglot-->
       <h2>Kosmetyki inglot</h2>
         <div class="goods" id="inglot"> 
-        <div class="book-03"><img src="img/jr_01.jpg"><b>Jednorożec #1</b> <i>Broszka ~3 cm<br/>25 PLN</i></div>
-        <div class="book-03"><img src="img/jednorozec_2061.jpg"><b>Jednorożec #3</b> <i>Broszka ~3 cm <br/>25 PLN</i></div>     
+        <div class="book-03"><img src="img/inglot_ciene_do_powiek.jpg"><b>Zestaw cieni do powiek INGLOT Freedom System</b> <i>Zestaw 6 cieni do powiek w opakowaniu dekorowanym kryształkami Swarovskiego.<br/><i>120 PLN / 2000 Rub.</i></div>
+        <div class="book-03"><img src="img/inglot_zestaw_lipstick_maskara.jpg"><b>INGLOT Zestaw prezentowy</b> Zestaw prezentowy, składający się ze szminki Q10 Lipstick, kolor 48 More than Red oraz tuszu do rzęs False Lash Effect Mascara, czarnego. Wszystko zapakowane w ozdobny czarny, aksamitny woreczek że złotym napisem. <br/>120 PLN / 2000 Rub.</i></div>     
         <div class="br"></div>             
    </div>
         <!--/kosmetyki inglot-->
