--- a/prezenty.html
+++ b/prezenty.html
@@ -8,12 +8,12 @@
         <title>WOŚP Moskwa 2022 | SZTAB Moskwa zaprasza na targi na rzecz WOŚP</title>
         <meta name="description" content="Moskiewski sztab Wielkiej Orkiestry Świątecznej Pomocy zaprasza na charytatywny jarmark bożonarodzeniowy. Całkowity dochód ze sprzedaży przeznaczony będzie na cele 30. Finału WOŚP, czyli zakup sprzętu dla zapewnienia najwyższych standardów diagnostyki i leczenia wzroku u dzieci" />
         <link rel="stylesheet" href="css.css" type="text/css" />
-        <meta property="og:title" content="WOŚP 2022 SZTAB Moskwa zaprasza na targi na rzecz WOŚP" />
-        <meta property="og:description" content="Moskiewski sztab WOŚP zaprasza na charytatywny jarmark. Całkowity dochód ze sprzedaży przeznaczony będzie na cele 30. Finału WOŚP, czyli zakup sprzętu dla zapewnienia najwyższych standardów diagnostyki i leczenia wzroku u dzieci" />
+        <meta property="og:title" content="WOŚP 2022 SZTAB Moskwa zaprasza na online targi na rzecz WOŚP" />
+        <meta property="og:description" content="Moskiewski sztab WOŚP zaprasza na online targi. Całkowity dochód ze sprzedaży przeznaczony będzie na cele 30. Finału WOŚP, czyli zakup sprzętu dla zapewnienia najwyższych standardów diagnostyki i leczenia wzroku u dzieci" />
         <meta property="og:site_name" content="WOŚP Moskwa Nonprofit Organization" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://wospmoskwa.github.io/" />
-       	<meta property="og:image" content="https://wospmoskwa.github.io/logo_30_site.jpg" />    
+        <meta property="og:url" content="https://wospmoskwa.github.io/prezenty.html" />
+       	<meta property="og:image" content="https://wospmoskwa.github.io/logo_30_site_am.jpg" />    
         <meta property="og:image:width" content="1200" />
 		<meta property="og:image:height" content="627" />
         <meta property="og:image:type" content="image/jpg"> 
@@ -24,9 +24,9 @@
             .main-container {margin:auto; padding:5px; text-align:center; min-width:320px; max-width:480px;}
             .banner {background-image: url(img/1122_480_n.png) !important; height:157px; }
             .goods {min-width:320px; max-width:480px;}
-	 .book-01 { font-size:12px; width:150px; height:230px; margin:5px 5px 5px 0px; text-align:center; border:1px solid #ccc; float:left; display:inline-block; background:#fff; }
-	.book-01 img {margin:5px auto; height:150px;}
-	.book-01 i {font-size:12px;}
+	 .book-03 { font-size:12px; width:150px; height:230px; margin:5px 5px 5px 0px; text-align:center; border:1px solid #ccc; float:left; display:inline-block; background:#fff; }
+	.book-03 img {margin:5px auto; height:150px;}
+	.book-03 i {font-size:12px;}
             .fr, .fl {float:none !important; clear:both; margin:10px 0px !important; width:100%; text-align:center;}  
             .contacts a.face {float: none; margin-top:5px; clear:both;}
            .contacts a.wosp, .contacts a.face {float: none; margin-left: 0px  !important; clear:both;}	
@@ -38,9 +38,9 @@
          .main-container {margin:auto; padding:5px; text-align:center; max-width:320px;}
          .banner {background-image: url(img/1122_320.png) !important; height:155px; }
          .goods {max-width:320px;}    
-	  .book-01 { font-size:12px; width:150px; height:215px; margin:5px 5px 5px 0px; text-align:center; border:1px solid #ccc; float:left; display:inline-block; background:#fff; }
-	.book-01 img {margin:5px auto; height:150px;}
-	.book-01 i {font-size:12px;}
+	  .book-03 { font-size:12px; width:150px; height:215px; margin:5px 5px 5px 0px; text-align:center; border:1px solid #ccc; float:left; display:inline-block; background:#fff; }
+	.book-03 img {margin:5px auto; height:150px;}
+	.book-03 i {font-size:12px;}
 	.fr, .fl  {float:none !important; clear:both; margin:10px 0px !important; width:100%; text-align:center;}   
          .contacts a.face {float: none; margin-top:5px; clear:both;}
         .contacts a.wosp, .contacts a.face  {float: none; margin-left: 0px !important; clear:both;}
@@ -81,7 +81,7 @@ Całkowity dochód ze sprzedaży przeznaczony będzie na cele 30. Finału WOŚP,
    </div>
         <!--/pierniki-->      
      <!-- kosmetyki inglot-->
-      <h2>Kosmetyki inglot</h2>
+      <h2>Kosmetyki INGLOT</h2>
         <div class="goods" id="inglot"> 
         <div class="book-03"><img src="img/inglot_ciene_do_powiek.jpg"><b>Zestaw cieni do powiek INGLOT Freedom System</b> <i>Zestaw 6 cieni do powiek w opakowaniu dekorowanym kryształkami Swarovskiego.<br/><i>120 PLN / 2000 Rub.</i></div>
         <div class="book-03"><img src="img/inglot_zestaw_lipstick_maskara.jpg"><b>INGLOT Zestaw prezentowy</b> Zestaw prezentowy, składający się ze szminki Q10 Lipstick, kolor 48 More than Red oraz tuszu do rzęs False Lash Effect Mascara, czarnego. Wszystko zapakowane w ozdobny czarny, aksamitny woreczek że złotym napisem. <br/>120 PLN / 2000 Rub.</i></div>     
