--- a/prezenty.html
+++ b/prezenty.html
@@ -55,7 +55,7 @@
      <!-- top menu-->
         <div class="topmenu-wrap">
 <div class="topmenu"><a href="/index.html#ozdoby_choinkowe">Ozdoby&nbsp;choinkowe</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/index.html#handmade">Handmade</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-	<a href="prezenty.html#pierniki">Pierniki</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="prezenty.html#kosmetyki">Kosmetyki</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#contact">Kontakt</a></div></div><div class="br"></div>
+	<a href="prezenty.html#pierniki">Pierniki<sup>NEW!</sup></a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="prezenty.html#kosmetyki">Kosmetyki<sup>NEW!</sup></a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#contact">Kontakt</a></div></div><div class="br"></div>
  </div><div class="br"></div>
    <!-- /top menu-->
      <!-- main container -->   
