--- a/prezenty.html
+++ b/prezenty.html
@@ -63,7 +63,7 @@
      <div class="anonce">Przedstawiamy prezenty.... <p><b>Drodzy Mikołajowie! Połączcie przyjemne z pożytecznym!</b></p>
 <p>Serdecznie zapraszamy do zakupów online, opłata za pośrednictwem eSkarbonki wolontariuszki naszego sztabu.<br/>
 Całkowity dochód ze sprzedaży przeznaczony będzie na cele 30. Finału WOŚP, czyli zakup sprzętu dla zapewnienia najwyższych standardów diagnostyki i leczenia wzroku u dzieci.</p>
-<p><span class="red">!&nbsp;Odbiór Ambasada RP, Bolshoy Tishinsky Pereulok. <b>Telefon kontaktowy +7 916 465 06 67</b></span></p>
+<p><span class="red">!&nbsp;</span><b>Odbiór Ambasada RP, Bolshoy Tishinsky Pereulok. <b>Telefon kontaktowy +7 916 465 06 67</b></p>
 <p><b>Opłata za towary za pośrednictwem eSkarbonki wolontariuszki naszego sztabu (Visa, Mastercard, Maestro, Paypal) przy odbiorze!</b></p>
               
     <div class="br"></div>
