--- a/prezenty.html
+++ b/prezenty.html
@@ -61,22 +61,22 @@
      <!-- main container -->   
   <div class="main-container">
      <div class="anonce">Przedstawiamy prezenty.... <p><b>Drodzy Mikołajowie! Połączcie przyjemne z pożytecznym!</b></p>
-<p>Serdecznie zapraszamy do zakupów online, opłata za pośrednictwem eSkarbonki wolontariuszki naszego sztabu.<br/>
+<p>Serdecznie zapraszamy do zakupów online, opłata za pośrednictwem eSkarbonki  wolontariuszki naszego sztabu (Visa, Mastercard, Maestro, Paypal).<br/>
 Całkowity dochód ze sprzedaży przeznaczony będzie na cele 30. Finału WOŚP, czyli zakup sprzętu dla zapewnienia najwyższych standardów diagnostyki i leczenia wzroku u dzieci.</p>
 <p><span class="red">!&nbsp;</span><b>Odbiór Ambasada RP, Bolshoy Tishinsky Pereulok. <b>Telefon kontaktowy +7 916 465 06 67</b></p>
-<p><b>Opłata za towary za pośrednictwem eSkarbonki wolontariuszki naszego sztabu (Visa, Mastercard, Maestro, Paypal) przy odbiorze!</b></p>
+<p><b style="font-size:120%; text-color:#D00;">Opłata za towary za pośrednictwem eSkarbonki przy odbiorze!</b></p>
               
     <div class="br"></div>
           <a href="https://eskarbonka.wosp.org.pl/td4lyz" target="_blank" class="eskarbonka" title="eSkarbonka"><b>eSkarbonka</b> obsługuje wszystkie karty Visa i Mastercard                      
           </a>
       </div> 
             <!--div class="rezerw"></div-->
-      <h1>Ceny PLN</h1>
+      <h1>Ceny PLN /Rub.</h1>
       <!-- pierniki-->
         <h2>Zestaw pierników</h2>
          <div class="goods" id="pierniki">  
-             <div class="book-03"><img src="img/pierniki_zestaw.jpg"><b>Pierniki Toruńskie — zestaw 2 opakowań w lnianym woreczku.<br/>Pierniki nadziewane o smaku moreli i czarnej porzeczki. 
-<br/>Pierniki o smaku whisky i tequili.</b><i>50 PLN / 1000 Rub.</i></div>  
+             <div class="book-03"><img src="img/pierniki_zestaw.jpg"><b>Pierniki Toruńskie — zestaw 2 opakowań w lnianym woreczku.</b><br/>Pierniki nadziewane o smaku moreli i czarnej porzeczki. 
+<br/>Pierniki o smaku whisky i tequili.<i>50 PLN / 1000 Rub.</i></div>  
              <div class="br"></div>             
    </div>
         <!--/pierniki-->      
