--- a/prezenty.html
+++ b/prezenty.html
@@ -76,15 +76,16 @@ Całkowity dochód ze sprzedaży przeznaczony będzie na cele 30. Finału WOŚP,
         <h2>Zestaw pierników</h2>
          <div class="goods" id="pierniki">  
              <div class="book-03"><img src="img/pierniki_zestaw.jpg"><b>Pierniki Toruńskie — zestaw 2 opakowań w lnianym woreczku.</b><br/>Pierniki nadziewane o smaku moreli i czarnej porzeczki. 
-<br/>Pierniki o smaku whisky i tequili.<i>50 PLN / 1000 Rub.</i></div>  
+<br/>Pierniki o smaku whisky i tequili.<i>50 PLN / 1000 Rub.</i>
+Oplata przy odbiorze!</div>  
              <div class="br"></div>             
    </div>
         <!--/pierniki-->      
      <!-- kosmetyki inglot-->
       <h2>Kosmetyki INGLOT</h2>
         <div class="goods" id="inglot"> 
-        <div class="book-03"><img src="img/inglot_ciene_do_powiek.jpg"><b>Zestaw cieni do powiek INGLOT Freedom System</b> <i>Zestaw 6 cieni do powiek w opakowaniu dekorowanym kryształkami Swarovskiego.<br/><i>120 PLN / 2000 Rub.</i></div>
-        <div class="book-03"><img src="img/inglot_zestaw_lipstick_maskara.jpg"><b>INGLOT Zestaw prezentowy</b> Zestaw prezentowy, składający się ze szminki Q10 Lipstick, kolor 48 More than Red oraz tuszu do rzęs False Lash Effect Mascara, czarnego. Wszystko zapakowane w ozdobny czarny, aksamitny woreczek że złotym napisem. <br/>120 PLN / 2000 Rub.</i></div>     
+        <div class="book-03"><img src="img/inglot_ciene_do_powiek.jpg"><b>Zestaw cieni do powiek INGLOT Freedom System</b> <i>Zestaw 6 cieni do powiek w opakowaniu dekorowanym kryształkami Swarovskiego.<br/><i>120 PLN / 2000 Rub.</i>Oplata przy odbiorze!</div>
+        <div class="book-03"><img src="img/inglot_zestaw_lipstick_maskara.jpg"><b>INGLOT Zestaw prezentowy</b>Szminka Q10 Lipstick, kolor 48 More than Red oraz tusz do rzęs False Lash Effect Mascara, czarnego. Wszystko zapakowane w ozdobny czarny, aksamitny woreczek że złotym napisem. <br/>120 PLN / 2000 Rub.</i>Oplata przy odbiorze!</div>     
         <div class="br"></div>             
    </div>
         <!--/kosmetyki inglot-->
