--- a/prezenty.html
+++ b/prezenty.html
@@ -77,15 +77,15 @@ Całkowity dochód ze sprzedaży przeznaczony będzie na cele 30. Finału WOŚP,
          <div class="goods" id="pierniki">  
              <div class="book-03"><img src="img/pierniki_zestaw.jpg"><b>Pierniki Toruńskie — zestaw 2 opakowań w lnianym woreczku.</b>Pierniki nadziewane o smaku moreli i czarnej porzeczki. 
 <br/>Pierniki o smaku whisky i tequili.<i>50 PLN / 1000 Rub.</i>
-Oplata przy odbiorze!</div>  
+<span class="payment">Opłata przy odbiorze!</span></div>  
              <div class="br"></div>             
    </div>
         <!--/pierniki-->      
      <!-- kosmetyki inglot-->
       <h2>Kosmetyki INGLOT</h2>
         <div class="goods" id="inglot"> 
-        <div class="book-03"><img src="img/inglot_ciene_do_powiek.jpg"><b>Zestaw cieni do powiek INGLOT Freedom System</b>Zestaw 6 cieni do powiek w opakowaniu dekorowanym kryształkami Swarovskiego.<br/><i>120 PLN / 2000 Rub.</i>Oplata przy odbiorze!</div>
-        <div class="book-03"><img src="img/inglot_zestaw_lipstick_maskara.jpg"><b>INGLOT Zestaw prezentowy</b>Szminka Q10 Lipstick, kolor 48 More than Red oraz tusz do rzęs False Lash Effect Mascara, czarny. Wszystko zapakowane w ozdobny czarny, aksamitny woreczek że złotym napisem.<br/>120 PLN / 2000 Rub.</i>Oplata przy odbiorze!</div>     
+        <div class="book-03"><img src="img/inglot_ciene_do_powiek.jpg"><b>Zestaw cieni do powiek INGLOT Freedom System</b>Zestaw 6 cieni do powiek w opakowaniu dekorowanym kryształkami Swarovskiego.<br/><i>120 PLN / 2000 Rub.</i><span class="payment">Opłata przy odbiorze!</span></div>
+        <div class="book-03"><img src="img/inglot_zestaw_lipstick_maskara.jpg"><b>INGLOT Zestaw prezentowy</b>Szminka Q10 Lipstick, kolor 48 More than Red oraz tusz do rzęs False Lash Effect Mascara, czarny. Wszystko zapakowane w ozdobny czarny, aksamitny woreczek że złotym napisem.<br/><i>120 PLN / 2000 Rub.</i><span class="payment">Opłata przy odbiorze!</span></div>     
         <div class="br"></div>             
    </div>
         <!--/kosmetyki inglot-->
