--- a/prezenty.html
+++ b/prezenty.html
@@ -75,8 +75,8 @@ Całkowity dochód ze sprzedaży przeznaczony będzie na cele 30. Finału WOŚP,
       <!-- pierniki-->
         <h2>Zestaw pierników</h2>
          <div class="goods" id="pierniki">  
-             <div class="book-03"><img src="img/pierniki_zestaw.jpg"><b>Pierniki Toruńskie — zestaw 2 opakowań w lnianym woreczku.</b>Pierniki nadziewane o smaku moreli i czarnej porzeczki. 
-<br/>Pierniki o smaku whisky i tequili.<i>50 PLN / 1000 Rub.</i>
+             <div class="book-03"><img src="img/pierniki_zestaw.jpg"><b>Pierniki Toruńskie — zestaw 2 opakowań<br/>w lnianym woreczku</b>Pierniki nadziewane o smaku moreli i czarnej porzeczki 
+<br/>Pierniki o smaku whisky i tequili<i>50 PLN / 1000 Rub.</i>
 <span class="payment">Opłata przy odbiorze!</span></div>  
              <div class="br"></div>             
    </div>
