--- a/prezenty.html
+++ b/prezenty.html
@@ -55,7 +55,7 @@
      <!-- top menu-->
         <div class="topmenu-wrap">
 <div class="topmenu"><a href="/index.html#ozdoby_choinkowe">Ozdoby&nbsp;choinkowe</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/index.html#handmade">Handmade</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-	<a href="prezenty.html#pierniki">Pierniki<sup>NEW!</sup></a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="prezenty.html#kosmetyki">Kosmetyki<sup>NEW!</sup></a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#contact">Kontakt</a></div></div><div class="br"></div>
+	<a href="prezenty.html#pierniki">Pierniki</a><sup>NEW!</sup>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="prezenty.html#kosmetyki">Kosmetyki</a><sup>NEW!</sup>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#contact">Kontakt</a></div></div><div class="br"></div>
  </div><div class="br"></div>
    <!-- /top menu-->
      <!-- main container -->   
@@ -75,7 +75,7 @@ Całkowity dochód ze sprzedaży przeznaczony będzie na cele 30. Finału WOŚP,
       <!-- pierniki-->
         <h2>Zestaw pierników</h2>
          <div class="goods" id="pierniki">  
-             <div class="book-03"><img src="img/pierniki_zestaw.jpg"><b>Pierniki Toruńskie — zestaw 2 opakowań<br/>w lnianym woreczku</b>Pierniki nadziewane o smaku moreli i czarnej porzeczki 
+             <div class="book-03"><img src="img/pierniki_zestaw.jpg"><b>Pierniki Toruńskie — zestaw 2 opakowań<br/>w lnianym woreczku</b>Pierniki nadziewane o smaku moreli<br/>i czarnej porzeczki 
 <br/>Pierniki o smaku whisky i tequili<i>50 PLN / 1000 Rub.</i>
 <span class="payment">Opłata przy odbiorze!</span></div>  
              <div class="br"></div>             
