--- a/prezenty.html
+++ b/prezenty.html
@@ -64,12 +64,9 @@
 <p>Serdecznie zapraszamy do zakupów online, opłata za pośrednictwem eSkarbonki  wolontariuszki naszego sztabu (Visa, Mastercard, Maestro, Paypal).<br/>
 Całkowity dochód ze sprzedaży przeznaczony będzie na cele 30. Finału WOŚP, czyli zakup sprzętu dla zapewnienia najwyższych standardów diagnostyki i leczenia wzroku u dzieci.</p>
 <p><span class="red">!&nbsp;</span><b>Odbiór Ambasada RP, Bolshoy Tishinsky Pereulok. <b>Telefon kontaktowy +7 916 465 06 67</b></p>
-<p><b style="font-size:120%; text-color:#D00;">Opłata za towary za pośrednictwem eSkarbonki przy odbiorze!</b></p>
-              
+<p><b style="font-size:120%; text-color:#D00;">Opłata za towary za pośrednictwem eSkarbonki przy odbiorze!</b></p>             
     <div class="br"></div>
-          <a href="https://eskarbonka.wosp.org.pl/td4lyz" target="_blank" class="eskarbonka" title="eSkarbonka"><b>eSkarbonka</b> obsługuje wszystkie karty Visa i Mastercard                      
-          </a>
-      </div> 
+          <a href="https://eskarbonka.wosp.org.pl/td4lyz" target="_blank" class="eskarbonka" title="eSkarbonka"><b>eSkarbonka</b> obsługuje wszystkie karty Visa i Mastercard</a></div> 
             <!--div class="rezerw"></div-->
       <h1>Ceny PLN /Rub.</h1>
       <!-- pierniki-->
