--- a/prezenty.html
+++ b/prezenty.html
@@ -70,9 +70,9 @@ Całkowity dochód ze sprzedaży przeznaczony będzie na cele 30. Finału WOŚP,
             <!--div class="rezerw"></div-->
       <h1>Ceny PLN</h1>
       <!-- pierniki-->
-        <h2>Zestaw pierników</h2>
+        <h2>Zestaw pierników toruńskich</h2>
          <div class="goods" id="pierniki">  
-             <div class="book-03"><img src="img/pierniki_zestaw.jpg"><b>Pierniki Toruńskie</b>Zestaw 2 opakowań<br/>w lnianym woreczku</b>Pierniki nadziewane o smaku moreli<br/>i czarnej porzeczki 
+             <div class="book-03"><img src="img/pierniki_zestaw.jpg"><b>Zestaw 2 opakowań<br/>w lnianym woreczku</b>Pierniki nadziewane o smaku moreli<br/>i czarnej porzeczki 
 <br/>Pierniki o smaku whisky i tequili<i>50 PLN</i>
 <span class="payment">Opłata przy odbiorze!</span></div>  
              <div class="br"></div>             
@@ -81,7 +81,7 @@ Całkowity dochód ze sprzedaży przeznaczony będzie na cele 30. Finału WOŚP,
      <!-- kosmetyki inglot-->
       <h2>Kosmetyki INGLOT</h2>
         <div class="goods" id="kosmetyki"> 
-        <div class="book-03"><img src="img/inglot_ciene_do_powiek.jpg"><b>Zestaw cieni do powiek INGLOT Freedom System</b>Zestaw 6 cieni do powiek<br/>w opakowaniu dekorowanym kryształkami Swarovskiego.<br/><i>120 PLN</i><span class="payment">Opłata przy odbiorze!</span></div>
+        <div class="book-03"><img src="img/inglot_ciene_do_powiek.jpg"><b>Zestaw cieni do powiek INGLOT Freedom System</b>Zestaw 6 cieni do powiek<br/>w opakowaniu dekorowanym<br/>kryształkami Swarovskiego.<br/><i>120 PLN</i><span class="payment">Opłata przy odbiorze!</span></div>
         <div class="book-03"><img src="img/inglot_zestaw_lipstick_maskara.jpg"><b>INGLOT Zestaw prezentowy</b>Szminka Q10 Lipstick, kolor 48 More than Red<br/oraz czarny tusz do rzęs False Lash Effect Mascara.<br/>Wszystko zapakowane w ozdobny czarny, aksamitny woreczek że złotym napisem.<br/><i>120 PLN</i><span class="payment">Opłata przy odbiorze!</span></div>     
         <div class="br"></div>             
    </div>
