--- a/prezenty.html
+++ b/prezenty.html
@@ -63,7 +63,7 @@
      <div class="anonce">Przedstawiamy prezenty.... <p><b>Drodzy Mikołajowie! Połączcie przyjemne z pożytecznym!</b></p>
 <p>Serdecznie zapraszamy do zakupów online, opłata za pośrednictwem eSkarbonki  wolontariuszki naszego sztabu (Visa, Mastercard, Maestro, Paypal).<br/>
 Całkowity dochód ze sprzedaży przeznaczony będzie na cele 30. Finału WOŚP, czyli zakup sprzętu dla zapewnienia najwyższych standardów diagnostyki i leczenia wzroku u dzieci.</p>
-<p><span class="red">!&nbsp;</span><b>Odbiór Ambasada RP, Bolshoy Tishinsky Pereulok. <b>Telefon kontaktowy +7 916 465 06 67</b></p>
+<p><span class="red">!&nbsp;</span><b>Odbiór Ambasada RP, Bolshoy Tishinsky Pereulok. Telefon kontaktowy +7 916 465 06 67</b></p>
 <p><b style="font-size:120%; text-color:#D00;">Opłata za towary za pośrednictwem eSkarbonki przy odbiorze!</b></p>             
     <div class="br"></div>
           <a href="https://eskarbonka.wosp.org.pl/td4lyz" target="_blank" class="eskarbonka" title="eSkarbonka"><b>eSkarbonka</b> obsługuje wszystkie karty Visa i Mastercard</a></div> 
@@ -82,7 +82,7 @@ Całkowity dochód ze sprzedaży przeznaczony będzie na cele 30. Finału WOŚP,
       <h2>Kosmetyki INGLOT</h2>
         <div class="goods" id="kosmetyki"> 
         <div class="book-03"><img src="img/inglot_ciene_do_powiek.jpg"><b>Zestaw cieni do powiek INGLOT Freedom System</b>Zestaw 6 cieni do powiek<br/>w opakowaniu dekorowanym<br/>kryształkami Swarovskiego.<br/><i>120 PLN</i><span class="payment">Opłata przy odbiorze!</span></div>
-        <div class="book-03"><img src="img/inglot_zestaw_lipstick_maskara.jpg"><b>INGLOT Zestaw prezentowy</b>Szminka Q10 Lipstick, kolor 48 More than Red<br/oraz czarny tusz do rzęs False Lash Effect Mascara.<br/>Wszystko zapakowane w ozdobny czarny, aksamitny woreczek że złotym napisem.<br/><i>120 PLN</i><span class="payment">Opłata przy odbiorze!</span></div>     
+        <div class="book-03"><img src="img/inglot_zestaw_lipstick_maskara.jpg"><b>INGLOT Zestaw prezentowy</b>Szminka Q10 Lipstick, kolor 48 More than Red<br/>oraz czarny tusz do rzęs False Lash Effect Mascara.<br/>Wszystko zapakowane w ozdobny czarny, aksamitny woreczek że złotym napisem.<br/><i>120 PLN</i><span class="payment">Opłata przy odbiorze!</span></div>     
         <div class="br"></div>             
    </div>
         <!--/kosmetyki inglot-->
