--- a/prezenty.html
+++ b/prezenty.html
@@ -63,7 +63,7 @@
      <div class="anonce">Przedstawiamy prezenty.... <p><b>Drodzy Mikołajowie! Połączcie przyjemne z pożytecznym!</b></p>
 <p>Serdecznie zapraszamy do zakupów online, opłata za pośrednictwem eSkarbonki  wolontariuszki naszego sztabu (Visa, Mastercard, Maestro, Paypal).<br/>
 Całkowity dochód ze sprzedaży przeznaczony będzie na cele 30. Finału WOŚP, czyli zakup sprzętu dla zapewnienia najwyższych standardów diagnostyki i leczenia wzroku u dzieci.</p>
-<p><span class="red">!&nbsp;</span><b>Odbiór Ambasada RP, Bolshoy Tishinsky Pereulok. <span style:white-space:nowrap;>Telefon kontaktowy +7 916 465 06 67</span></b></p>
+<p><span class="red">!&nbsp;</span><b>Odbiór Ambasada RP, Bolshoy Tishinsky Pereulok. <span style="white-space:nowrap;">Telefon kontaktowy +7 916 465 06 67</span></b></p>
 <p><b style="font-size:120%; text-color:#D00;">Opłata za towary za pośrednictwem eSkarbonki przy odbiorze!</b></p>             
     <div class="br"></div>
           <a href="https://eskarbonka.wosp.org.pl/td4lyz" target="_blank" class="eskarbonka" title="eSkarbonka"><b>eSkarbonka</b> obsługuje wszystkie karty Visa i Mastercard</a></div> 
