--- a/prezenty.html
+++ b/prezenty.html
@@ -64,7 +64,7 @@
 <p>Serdecznie zapraszamy do zakupów online, opłata za pośrednictwem eSkarbonki  wolontariuszki naszego sztabu (Visa, Mastercard, Maestro, Paypal).<br/>
 Całkowity dochód ze sprzedaży przeznaczony będzie <span style="white-space:nowrap;">na cele 30. Finału WOŚP,</span> czyli zakup sprzętu dla zapewnienia najwyższych standardów diagnostyki i leczenia wzroku u dzieci.</p>
 <p><span class="red">!&nbsp;</span><b>Odbiór Ambasada RP, Bolshoy Tishinsky Pereulok. <span style="white-space:nowrap;">Telefon kontaktowy <a href="tel:+79164650667" class="phone">+7 916 465 06 67</a></span></b></p>
-<p><span class="red">!&nbsp;</span><b style="font-size:120%;">Opłata za towary za pośrednictwem eSkarbonki przy odbiorze.</b></p>             
+<p><span class="red">!&nbsp;</span><b style="font-size:120%;">Opłata za towary za pośrednictwem eSkarbonki.</b></p>             
     <div class="br"></div>
           <a href="https://eskarbonka.wosp.org.pl/td4lyz" target="_blank" class="eskarbonka" title="eSkarbonka"><b>eSkarbonka</b> obsługuje wszystkie karty Visa i Mastercard</a></div> 
             <!--div class="rezerw"></div-->
@@ -74,15 +74,15 @@ Całkowity dochód ze sprzedaży przeznaczony będzie <span style="white-space:n
          <div class="goods" id="pierniki">  
              <div class="book-03"><img src="img/pierniki_zestaw.jpg"><b>Zestaw 2 opakowań<br/>w lnianym woreczku</b>Pierniki nadziewane o smaku moreli<br/>i czarnej porzeczki 
 <br/>Pierniki o smaku whisky i tequili<i>50 PLN</i>
-<span class="payment">Opłata przy odbiorze!</span></div>  
+<!--span class="payment">Opłata przy odbiorze!</span--></div>  
              <div class="br"></div>             
    </div>
         <!--/pierniki-->      
      <!-- kosmetyki inglot-->
       <h2>Kosmetyki INGLOT</h2>
         <div class="goods" id="kosmetyki"> 
-        <div class="book-03"><img src="img/inglot_ciene_do_powiek.jpg"><b>Zestaw cieni do powiek INGLOT Freedom System</b>Zestaw 6 cieni do powiek<br/>w opakowaniu dekorowanym<br/>kryształkami Swarovskiego.<br/><i>120 PLN</i><span class="payment">Opłata przy odbiorze!</span></div>
-        <div class="book-03"><img src="img/inglot_zestaw_lipstick_maskara.jpg"><b>INGLOT Zestaw prezentowy</b>Szminka Q10 Lipstick, kolor 48 More than Red<br/>oraz czarny tusz do rzęs False Lash Effect Mascara.<br/>Wszystko zapakowane w ozdobny czarny, aksamitny woreczek że złotym napisem.<br/><i>120 PLN</i><span class="payment">Opłata przy odbiorze!</span></div>     
+        <div class="book-03"><img src="img/inglot_ciene_do_powiek.jpg"><b>Zestaw cieni do powiek INGLOT Freedom System</b>Zestaw 6 cieni do powiek<br/>w opakowaniu dekorowanym<br/>kryształkami Swarovskiego.<br/><i>120 PLN</i><!--span class="payment">Opłata przy odbiorze!</span--></div>
+        <div class="book-03"><img src="img/inglot_zestaw_lipstick_maskara.jpg"><b>INGLOT Zestaw prezentowy</b>Szminka Q10 Lipstick, kolor 48 More than Red<br/>oraz czarny tusz do rzęs False Lash Effect Mascara.<br/>Wszystko zapakowane w ozdobny czarny, aksamitny woreczek że złotym napisem.<br/><i>120 PLN</i><!--span class="payment">Opłata przy odbiorze!</span--></div>     
         <div class="br"></div>             
    </div>
         <!--/kosmetyki inglot-->
